--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About Us</a>
+                            <a class="nav-link" href="About.html">About Us</a>
                         </li>
 
                         <li class="nav-item">
@@ -78,7 +78,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="Contact.html">Contact</a>
                         </li>
                     </ul>
 
