--- a/About.html
+++ b/About.html
@@ -65,7 +65,7 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" href="about.html">About Us</a>
+                                <a class="nav-link active" href="About.html">About Us</a>
                             </li>
 
                             <li class="nav-item">
@@ -77,7 +77,7 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link" href="Contact.html">Contact</a>
                             </li>
                         </ul>
 
@@ -238,7 +238,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <h5 class="text-white mb-3">Sitemap</h5>
 
                         <ul class="footer-menu d-flex flex-wrap">
-                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">About Us</a></li>
+                            <li class="footer-menu-item"><a href="About.html" class="footer-menu-link">About Us</a></li>
 
                             <li class="footer-menu-item"><a href="OurPartner.html" class="footer-menu-link">Our Partners</a></li>
 
@@ -246,7 +246,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                             <li class="footer-menu-item"><a href="faq.html" class="footer-menu-link">FAQs</a></li>
 
-                            <li class="footer-menu-item"><a href="contact.html" class="footer-menu-link">Contact</a></li>
+                            <li class="footer-menu-item"><a href="Contact.html" class="footer-menu-link">Contact</a></li>
                         </ul>
                     </div>
 
