--- a/faq.html
+++ b/faq.html
@@ -24,10 +24,7 @@
         <link href="css/tooplate-little-fashion.css" rel="stylesheet">
         
 <!--
-
-Tooplate 2127 Little Fashion
-
-https://www.tooplate.com/view/2127-little-fashion
+ 
 
 -->
     </head>
@@ -55,7 +52,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     <div class="d-lg-none">
                         <a href="sign-in.html" class="bi-person custom-icon me-3"></a>
 
-                        <a href="product-detail.html" class="bi-bag custom-icon"></a>
+                       
                     </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
@@ -65,7 +62,7 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">About Us</a>
+                                <a class="nav-link" href="About.html">About Us</a>
                             </li>
 
                             <li class="nav-item">
@@ -77,7 +74,7 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link" href="Contact.html">Contact</a>
                             </li>
                         </ul>
 
@@ -241,7 +238,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <h5 class="text-white mb-3">Sitemap</h5>
 
                         <ul class="footer-menu d-flex flex-wrap">
-                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">About Us</a></li>
+                            <li class="footer-menu-item"><a href="About.html" class="footer-menu-link">About Us</a></li>
 
                             <li class="footer-menu-item"><a href="OurPartner.html" class="footer-menu-link">Our Partners</a></li>
 
@@ -249,7 +246,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                             <li class="footer-menu-item"><a href="faq.html" class="footer-menu-link">FAQs</a></li>
 
-                            <li class="footer-menu-item"><a href="contact.html" class="footer-menu-link">Contact</a></li>
+                            <li class="footer-menu-item"><a href="Contact.html" class="footer-menu-link">Contact</a></li>
                         </ul>
                     </div>
 
