--- a/sign-up.html
+++ b/sign-up.html
@@ -25,9 +25,7 @@
         
 <!--
 
-Tooplate 2127 Little Fashion
-
-https://www.tooplate.com/view/2127-little-fashion
+ 
 
 -->
     </head>
@@ -124,7 +122,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <h5 class="text-white mb-3">Sitemap</h5>
 
                         <ul class="footer-menu d-flex flex-wrap">
-                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">About Us</a></li>
+                            <li class="footer-menu-item"><a href="About.html" class="footer-menu-link">About Us</a></li>
 
                             <li class="footer-menu-item"><a href="OurPartner.html" class="footer-menu-link">Our Partners</a></li>
 
@@ -132,7 +130,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                             <li class="footer-menu-item"><a href="faq.html" class="footer-menu-link">FAQs</a></li>
 
-                            <li class="footer-menu-item"><a href="contact.html" class="footer-menu-link">Contact</a></li>
+                            <li class="footer-menu-item"><a href="Contact.html" class="footer-menu-link">Contact</a></li>
                         </ul>
                     </div>
 
